--- a/Coinprism.BackupDecryptTool/Coinprism.BackupDecryptTool.csproj
+++ b/Coinprism.BackupDecryptTool/Coinprism.BackupDecryptTool.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="2.0.2" />
+    <PackageReference Include="NBitcoin" Version="4.1.0.11" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
+  </ItemGroup>
+
 </Project>
